fix: cache busting for mobile cover image and z-index fix

--- a/styles.css
+++ b/styles.css
@@ -28,15 +28,15 @@ canvas{display:block;width:100%;height:100%}
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('menu_background.png');
+    background-image: url('menu_background_v2.png');
     background-size: cover;
     background-position: center bottom;
-    z-index: 0;
+    z-index: 1;
 }
 
 .menu-content-wrapper {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
